--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Dat site title tho
+name: IBM Cloud Transformation Advisor
 markdown: redcarpet
 pygments: true
-description: "Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-url: "jekyll-new.joelglovier.com"
+description: "Transformation Advisor Documentation, videos, FAQ & What's New"
+url: "TransformationAdvisor.github.io"
 permalink: /posts/:title
