--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: IBM Cloud Transformation Advisor
+name: IBM Cloud Transformation Advisor FAQ
 markdown: redcarpet
 pygments: true
 description: "Transformation Advisor Documentation, videos, FAQ & What's New"
