--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 name: IBM Cloud Transformation Advisor FAQ
-markdown: redcarpet
-pygments: true
+markdown: commonmarker
 description: "Transformation Advisor Documentation, videos, FAQ & What's New"
 url: "TransformationAdvisor.github.io"
 permalink: /posts/:title
