--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-name: IBM Cloud Transformation Advisor FAQ
-markdown: redcarpet
+name: IBM Cloud Transformation Advisor
 description: "Transformation Advisor Documentation, videos, FAQ & What's New"
 url: "TransformationAdvisor.github.io"
 permalink: /posts/:title
